--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,15 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.table-responsive-md {
+  font-size: 14px;
+}
+
+.navbar-header .navbar-brand {
+  //text-transform: uppercase;
+  //letter-spacing: -1px;
+  //font-weight: bold;
+  color: orange;
+  font-size: 20px;
+}
