--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<div style="margin: auto; width: 70%">
+<div style="margin: auto; width: 90%">
+  <%= render 'layouts/filters' %>
   <h3>Reserwacje</h3>
   <%= link_to 'Nowa rezerwacja', new_reservation_path, :class => "btn btn-default" %>
 
