--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,22 @@
+
 <header class="navbar navbar-inverse">
-  <div class="container">
+  <div style="margin: auto; width: 90%">
     <div class="navbar-header">
         <%= link_to "Apartamenty Lunałke", root_path, :class => 'navbar-brand' %>
     </div>
     <% if user_signed_in? %>
       <ul class="nav navbar-nav navbar-left navbar-menu">
         <li>
+          <%= link_to "Dodaj apartament", new_apartament_path %>
+        </li>
+        <li>
+          <%= link_to "Lista apartementow", apartaments_path %>
+        </li>
+        <li>
           <%= link_to "Rezerwacje", reservations_path %>
         </li>
         <li>
-          <%= link_to "Nowa reserwacja", new_reservation_path %>
+          <%= link_to "Nowa rezerwacja", new_reservation_path %>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -29,10 +36,16 @@
     <% else %>
       <ul class="nav navbar-nav navbar-left navbar-menu">
         <li>
-          <%= link_to "Reservations", reservations_path %>
+          <%= link_to "Dodaj apartament", new_apartament_path %>
         </li>
         <li>
-          <%= link_to "Nowa reserwacja", new_reservation_path %>
+          <%= link_to "Lista apartementow", apartaments_path %>
+        </li>
+        <li>
+          <%= link_to "Rezerwacje", reservations_path %>
+        </li>
+        <li>
+          <%= link_to "Nowa rezerwacja", new_reservation_path %>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -52,5 +65,5 @@
         </li>
       </ul>
     <% end %>
-  </div>
+</div>
 </header>
