--- a/app/views/reservations/_list.html.erb
+++ b/app/views/reservations/_list.html.erb
@@ -1,48 +1,78 @@
-<div id="filterrific_results">
+<div id="reservations_list">
   <table class="table table-striped table-hover table-bordered">
-    <thead class="thead-inverse">
-    <tr>
-      <th>Numer</th>
-      <th>Status</th>
-      <th>Zrodlo</th>
-      <th>Zakwaterowanie</th>
-      <th>Wykwaterowanie</th>
-      <th>Apartament</th>
-      <th>Klient</th>
-      <th><span class="glyphicon glyphicon-user"></span></th>
-      <th><span class="glyphicon glyphicon-calendar"></span></th>
-      <th><span class="glyphicon glyphicon-usd"></span></th>
-      <th><span class="glyphicon glyphicon-plane"></span></th>
-      <th><span class="glyphicon glyphicon-road"></span></th>
-      <th><span class="glyphicon glyphicon-thumbs-up"></span></th>
-      <th colspan="5">Akcje</th>
-    </tr>
-    </thead>
 
-    <tbody>
-    <% @reservations.each do |reservation| %>
+      <thead class="thead-inverse">
       <tr>
-        <td><%= link_to reservation.numer, reservation %></td>
-        <td><%= reservation.status %></td>
-        <td><%= reservation.zrodlo %></td>
-        <td><%= reservation.data_zakwaterowania %> <%= reservation.godzina_zakwaterowania.to_s(:time) %></td>
-        <td><%= reservation.data_wykwaterowania %> <%= reservation.godzina_wykwaterowania.to_s(:time) %></td>
-        <td><%= reservation.apartament.adres %></td>
-        <td><%= reservation.klient %></td>
-        <td><%= reservation.ilosc_osob %></td>
-        <td><%= (reservation.data_wykwaterowania - reservation.data_zakwaterowania).to_i %></td>
-        <td><%= reservation.kwota %></td>
-        <td><%= reservation.kwota %></td>
-        <td><%= reservation.kwota %></td>
-        <td><%= reservation.kwota %></td>
-
-        <td><%= link_to '', reservation_path(reservation, :format => 'pdf') , :class => 'glyphicon glyphicon-download-alt' %></td>
-        <td><%= link_to '', faktura_reservation_path(reservation, :format => 'pdf'), :class => 'glyphicon glyphicon-envelope' %></td>
-        <td><%= link_to '', reservation, :class => 'glyphicon glyphicon-edit' %></td>
-        <td><%= link_to '', edit_reservation_path(reservation), :class => 'glyphicon glyphicon-edit' %></td>
-        <td><%= link_to '', reservation, method: :delete, data: { confirm: 'Na pewno chcesz wykasować tą rezerwacje?' }, :class => 'glyphicon glyphicon-trash' %></td>
+        <th>Numer</th>
+        <th>Status</th>
+        <th>Zrodlo</th>
+        <th><span class="glyphicon glyphicon-calendar"></span></th>
+        <th><span class="glyphicon glyphicon-log-in"></span></th>
+        <th><span class="glyphicon glyphicon-calendar"></span></th>
+        <th><span class="glyphicon glyphicon-log-out"></span></th>
+        <th>Apartament</th>
+        <th>Klient</th>
+        <th><span class="glyphicon glyphicon-user"></span></th>
+        <th><span class="glyphicon glyphicon-calendar"></span></th>
+        <th><span class="glyphicon glyphicon-usd"></span></th>
+        <th><span class="glyphicon glyphicon-plane"></span></th>
+        <th><span class="glyphicon glyphicon-road"></span></th>
+        <th><span class="glyphicon glyphicon-thumbs-up"></span></th>
+        <th colspan="5">Akcje</th>
       </tr>
-    <% end %>
-    </tbody>
-  </table>
+      </thead>
+
+      <tbody>
+      <% @reservations.each do |reservation| %>
+        <tr>
+          <td><%= link_to reservation.numer, reservation %></td>
+          <td><%= reservation.status %></td>
+          <td><%= reservation.zrodlo %></td>
+          <td><%= reservation.data_zakwaterowania.to_date %></td>
+          <td><%= reservation.data_zakwaterowania.strftime("%H:%M") %></td>
+          <td><%= reservation.data_wykwaterowania.to_date %></td>
+          <td><%= reservation.data_wykwaterowania.strftime("%H:%M") %></td>
+          <td><%= reservation.apartament.adres %></td>
+          <td><%= reservation.klient %></td>
+          <td><%= reservation.ilosc_osob %></td>
+          <td><%= (reservation.data_wykwaterowania.to_date - reservation.data_zakwaterowania.to_date).to_i %></td>
+          <td><%= reservation.kwota %></td>
+          <td><%= reservation.kwota %></td>
+          <td><%= reservation.kwota %></td>
+          <td><%= reservation.kwota %></td>
+
+          <td><%= link_to '', reservation_path(reservation, :format => 'pdf') , :class => 'glyphicon glyphicon-download-alt' %></td>
+          <td><%= link_to '', faktura_reservation_path(reservation, :format => 'pdf'), :class => 'glyphicon glyphicon-envelope' %></td>
+          <td><%= link_to '', reservation, :class => 'glyphicon glyphicon-edit' %></td>
+          <td><%= link_to '', edit_reservation_path(reservation), :class => 'glyphicon glyphicon-edit' %></td>
+          <td><%= link_to '', reservation, method: :delete, data: { confirm: 'Na pewno chcesz wykasować tą rezerwacje?' }, :class => 'glyphicon glyphicon-trash' %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  <div class="flickr_pagination">
+    <div class="page_info">
+      <%= page_entries_info @reservations %>
+    </div>
+    <%= paginate @reservations %>
+  </div>
 </div>
+
+<script type="text/javascript">
+    $(".previous_page").click(function() {
+        window.scrollTo(0, 0);
+        $('#spinner').show();
+    });
+
+    $(".next_page").click(function() {
+        window.scrollTo(0, 0);
+        $('#spinner').show();
+    });
+
+    $(".flickr_pagination a").click(function() {
+        window.scrollTo(0, 0);
+        $('#spinner').show();
+    });
+</script>
+
+
